<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvName" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvAmount" />

        <TextView
            android:id="@+id/tvCalory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvCalorie" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvProtein" />

        <TextView
            android:id="@+id/tvCarb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvCarbs" />

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvFat" />

    </LinearLayout>


</LinearLayout>
